# zvm

./: .env  .envrc  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.MD  GEMINI.md  LICENSE  README.md  RELEASING.md  archive.ts  build.ts  build.zig  build.zig.zon  deno.json  deno.jsonc  go.mod  go.sum  help.txt  install.cpp  install.ps1  install.sh  install.ts  main.go  main_test.go  out.txt  schema.json  zvm.exe.manifest
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: daily_canary.yml  go.yml  install-script.yml  linux.yml  macos.yml
cli/: cdn.go  clean.go  config.go  config_test.go  defaults.go  defaults_darwin.go  defaults_test.go  defaults_unix.go  defaults_windows.go  env.go  error.go  feedback.go  fileperms_linux.go  fileperms_unix.go  fileperms_win.go  install.go  install_extract_test.go  install_sysinfo_test.go  install_test.go  install_untarxz_test.go  ls.go  realworld_test.go  report.go  resolve.go  resolve_test.go  run.go  settings.go  symlink_unix.go  symlink_win.go  sync.go  uninstall.go  upgrade.go  upgrade_disabled.go  upgrade_test.go  use.go  use_test.go  user_perm_win.go  version.go  version_test.go
cli/meta/: build_flags.go  cta.go  errors.go  exec.go  link_unix.go  link_win.go  meta_test.go  symlink_unix.go  symlink_win.go  upgrade.go  upgrade_disabled.go  version.go
cli/zon/: config.go  config_test.go  tokens.go
pm/: errors.go  install.go  lexer.go  parser.go  parser.y  pm.go  project.go  validate.go
src/: ansi.zig  curl.zig  fetch-version.zig  main.zig  root.zig
src/cli/: cli.zig  config.zig  install.zig  mod.zig  system.zig  use.zig
zig/: build.zig  build.zig.zon
zig-cache/o/01ff7ccc3d1250c00605e9db8744aa54/: zvm
zig-cache/o/03d06d80df828b2b211327b4ff457d98/: zvm
zig-cache/o/0586541eca403574a4c46f8cf85fe467/: zvm
zig-cache/o/06ac133e06d4e9e75ea364e9a8d9f38b/: zvm
zig-cache/o/08cffa859f499653a05457a6c87919c9/: zvm
zig-cache/o/0aa4455e19553c296a64207341ab6053/: zvm
(+105 files in other folders)
